# UFCF-ZERO

./: .gitignore  README.md  mini_lattice.ipynb  pyproject.toml  requirements-ci.txt  requirements.txt
.github/workflows/: ci.yml  run_notebook.yml
notebooks/: mini_lattice.ipynb
papers/: L_total_6D.tex  ufcf_zero.tex
scripts/: planck_low_l.py
src/ufcf_zero/: lagrangian.py  uv_check.py
tests/: test_eom.py  test_uv.py
